{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 140,
  "lineage": "0502b4e8-e13d-b75d-eaae-efcdd5cb0547",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:854468721651:loadbalancer/app/public-alb/7fca02d2bcac78b2",
            "arn_suffix": "app/public-alb/7fca02d2bcac78b2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-alb-1392769973.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:854468721651:loadbalancer/app/public-alb/7fca02d2bcac78b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-095d9ca196904704d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b5e9d2d1c6f6b53"
              },
              {
                "subnet_id": "subnet-063a8cd692bcce55a"
              }
            ],
            "subnets": [
              "subnet-02b5e9d2d1c6f6b53",
              "subnet-063a8cd692bcce55a"
            ],
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.my_alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f6b9dd1e1aa217",
            "association_id": "eipassoc-0ebff1175fa834aec",
            "domain": "vpc",
            "id": "eipalloc-0c0f6b9dd1e1aa217",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00542cddbbf873273",
            "private_dns": "ip-10-0-1-90.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-13-213-128-230.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.128.230",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052f483c20fa1351a",
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:instance/i-0a9a5d89f5c88e98f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9a5d89f5c88e98f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-user",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005edb99ae0ffb77f",
            "private_dns": "ip-10-0-1-78.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_ip": "13.229.87.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:854468721651:key/8c7d8780-b932-4f17-91e2-592dc7226e17",
                "throughput": 125,
                "volume_id": "vol-00c7e033213167a26",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c90dd4c84054a94",
              "sg-095d9ca196904704d",
              "sg-0d0498faf5d2c7f76"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063a8cd692bcce55a",
            "tags": {
              "Name": "puclic-ec2-instance-1"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "puclic-ec2-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c90dd4c84054a94",
              "sg-095d9ca196904704d",
              "sg-0d0498faf5d2c7f76"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_user",
            "aws_security_group.my_alb_sg",
            "aws_security_group.my_app_sg",
            "aws_security_group.my_ssh_sg",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:internet-gateway/igw-068bd25d41d44f62c",
            "id": "igw-068bd25d41d44f62c",
            "owner_id": "854468721651",
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f6b9dd1e1aa217",
            "association_id": "eipassoc-0ebff1175fa834aec",
            "connectivity_type": "public",
            "id": "nat-0b8c1da51f256298c",
            "network_interface_id": "eni-00542cddbbf873273",
            "private_ip": "10.0.1.90",
            "public_ip": "13.213.128.230",
            "subnet_id": "subnet-063a8cd692bcce55a",
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:route-table/rtb-09ed9d66389d49873",
            "id": "rtb-09ed9d66389d49873",
            "owner_id": "854468721651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8c1da51f256298c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:route-table/rtb-0d679e284b541389f",
            "id": "rtb-0d679e284b541389f",
            "owner_id": "854468721651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8c1da51f256298c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:route-table/rtb-0f99b70cfba122bdc",
            "id": "rtb-0f99b70cfba122bdc",
            "owner_id": "854468721651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8c1da51f256298c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:route-table/rtb-0718e87f46f5a3d0c",
            "id": "rtb-0718e87f46f5a3d0c",
            "owner_id": "854468721651",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068bd25d41d44f62c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table for public subnet"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "route table for public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5a6256f7b93182e",
            "route_table_id": "rtb-09ed9d66389d49873",
            "subnet_id": "subnet-043763119e89d71ca"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd9d075fa25a367b",
            "route_table_id": "rtb-0d679e284b541389f",
            "subnet_id": "subnet-0c1fcb03dfcbf144a"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed2f2fecfa9373c",
            "route_table_id": "rtb-0f99b70cfba122bdc",
            "subnet_id": "subnet-07721dc1a7342a86a"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table_3",
            "aws_subnet.private_c",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072467d124b27d04f",
            "route_table_id": "rtb-0718e87f46f5a3d0c",
            "subnet_id": "subnet-063a8cd692bcce55a"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195e57598f89c6e6",
            "route_table_id": "rtb-0718e87f46f5a3d0c",
            "subnet_id": "subnet-02b5e9d2d1c6f6b53"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0221a78afb9dbe907",
            "route_table_id": "rtb-0718e87f46f5a3d0c",
            "subnet_id": "subnet-09e9c1e3285aa40f7"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:security-group/sg-095d9ca196904704d",
            "description": "Security group for ALB",
            "egress": [],
            "id": "sg-095d9ca196904704d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-alb-sg",
            "name_prefix": "",
            "owner_id": "854468721651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-alb-sg"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "public-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:security-group/sg-0d0498faf5d2c7f76",
            "description": "Security group for app",
            "egress": [],
            "id": "sg-0d0498faf5d2c7f76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "854468721651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:security-group/sg-03c90dd4c84054a94",
            "description": "Security group for ssh",
            "egress": [],
            "id": "sg-03c90dd4c84054a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "854468721651",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-043763119e89d71ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043763119e89d71ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private a"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "private a"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-0c1fcb03dfcbf144a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1fcb03dfcbf144a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private b"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "private b"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-07721dc1a7342a86a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07721dc1a7342a86a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private c"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "private c"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-063a8cd692bcce55a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a8cd692bcce55a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public a"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "public a"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-02b5e9d2d1c6f6b53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b5e9d2d1c6f6b53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public b"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "public b"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:subnet/subnet-09e9c1e3285aa40f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e9c1e3285aa40f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "854468721651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public c"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "public c"
            },
            "vpc_id": "vpc-02df66f3e848e3e1e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:854468721651:vpc/vpc-02df66f3e848e3e1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0645435f42c52a5ce",
            "default_route_table_id": "rtb-055d638b6018c7205",
            "default_security_group_id": "sg-09d3a5e9bf249780b",
            "dhcp_options_id": "dopt-00c09673e39441312",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02df66f3e848e3e1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055d638b6018c7205",
            "owner_id": "854468721651",
            "tags": {
              "Name": "trainee vpc"
            },
            "tags_all": {
              "Createby": "tec trainee",
              "Environment": "dev",
              "Name": "trainee vpc"
            }
          }
        }
      ]
    }
  ]
}